# allinone-crypto-trading-mcp-server

./: .gitignore  CNAME  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  smithery.yaml
.github/scripts/: algolia-index.js
.github/workflows/: algolia-index.yml  deploy-docs.yml
docs/: README.md  getting-started.md
docs/api-reference/: README.md  trading.md
docs/deployment/: docker.md  production.md
docs/features/: ai-signals.md  dex-analytics.md  news-sentiment.md  risk-management.md  telegram-bot.md  trading.md  whale-tracking.md
docs/integrations/: blockchains.md  exchanges.md
docs/tutorials/: configuration.md  first-trade.md  installation.md
src/: __init__.py  env.py  main.py  mcp_tools.py
src/addons/base_free/: __init__.py  base_free_usdc.py
src/addons/bridges/: __init__.py  cross_chain.py
src/addons/goat/: __init__.py  goat_proxy.py
src/addons/news/: __init__.py  aggregator.py  cryptopanic_tools.py  feargreed_tools.py
src/addons/signals/: __init__.py  whales_tools.py
src/ai/: __init__.py  signals.py
src/cex/: __init__.py  exchanges.py  market_data.py  trading.py
src/core/: __init__.py  exceptions.py  types.py  utils.py
src/evm/: __init__.py  client.py
src/portfolio/: __init__.py  manager.py
src/risk/: manager.py
src/solana/: __init__.py  client.py  dex.py  pyth.py
src/telegram/: bot.py
src/wallets/: __init__.py
website/: README.md  algolia-config.json  docusaurus.config.js  docusaurus.config.js.backup  package-lock.json  package.json  sidebars.js
website/docs/: getting-started.md  index.md
website/docs/api-reference/: README.md  trading.md
website/docs/deployment/: docker.md  production.md
website/docs/features/: ai-signals.md  blockchain.md  dex-analytics.md  news-sentiment.md  risk-management.md  telegram-bot.md  trading.md  whale-tracking.md
website/docs/tutorials/: configuration.md  first-trade.md  installation.md
website/src/css/: custom.css
